[package]
name = "websocket-gateway"
version = "0.1.0"
authors = ["Leon Hartley <leon.hartley@degree53.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "0.10.1", features = ["tls", "stream", "connect"] }
tungstenite = { version = "0.10.0", default-features = false }
bytes = "0.5.3"
byteorder = "1.3.2"
tokio = { version = "0.2", default-features = false, features = ["io-std", "macros", "stream", "time"] }
tokio-util = { version = "0.3.1", features = ["codec", "compat"] }
futures = { version = "0.3"}
futures-io = { version = "0.3"}
futures-util = { version = "0.3" }
log = "0.4"
env_logger = "0.7"
futures-channel = "0.3"
url = "2.0.0"
chrono = "0.4"
